k8s/route.yaml

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: form-bff
  name: form-bff
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: form-bff
    weight: 100
